src/pdl_parser/pdlParser.py
# Generated from pdl.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class pdlParser ( Parser ):

    grammarFileName = "pdl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'iPDLLevel'", "'iProcsForModule'", "'iProc'", 
                     "'iPrefix'", "'iCall'", "'iReset'", "'iUseProcNameSpace'", 
                     "'iRead'", "'iWrite'", "'iScan'", "'iApply'", "'iNote'", 
                     "'iTake'", "'iRelease'", "'iMerge'", "'iClock'", "'iClockOverride'", 
                     "'iRunLoop'", "'iOverrideScanInterface'", "'iState'", 
                     "'iGetReadData'", "'iGetMiscompares'", "'iGetStatus'", 
                     "'iSetFail'", "'on'", "'off'", "'-version'", "'0'", 
                     "'1'", "'STD_1687_2014'", "'-iProcNameSpace'", "'::'", 
                     "'-'", "'{'", "'}'", "'-sync'", "'-ir'", "'\u2013chain'", 
                     "'-si'", "'-so'", "'-stable'", "'-capture'", "'-update'", 
                     "'-broadcast'", "'-together'", "'-source'", "'-freqMultiplier'", 
                     "'-freqDivider'", "'-tck'", "'-sck'", "'-time'", "'-begin'", 
                     "'-end'", "'-comment'", "'-status'", "'-LastWrittenValue'", 
                     "'-LastReadValue'", "'-LastMiscompareValue'", "'-dec'", 
                     "'-bin'", "'-hex'", "'-clear'", "'-quit'", "<INVALID>", 
                     "<INVALID>", "'['", "']'", "'('", "')'", "':'", "'.'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "SCALAR_ID", "ARGUMENT_REF", "LBRACKET", "RBRACKET", 
                      "LPAREN", "RPAREN", "COLON", "DOT", "POS_INT", "TCL_HEX_NUMBER", 
                      "TCL_BIN_NUMBER", "ISCAN_HEX_NUMBER", "ISCAN_BIN_NUMBER", 
                      "EVALUE", "DVALUE", "TSUFFIX", "SL_COMMENT", "WS", 
                      "QUOTED", "SEMICOLON", "NL" ]

    RULE_pdl_source = 0
    RULE_dot_id = 1
    RULE_scalar_id = 2
    RULE_keyword = 3
    RULE_instancePath = 4
    RULE_scanInterface_name = 5
    RULE_port = 6
    RULE_reg_or_port = 7
    RULE_reg_port_or_instance = 8
    RULE_hier_signal = 9
    RULE_reg_port_signal_id = 10
    RULE_vector_id = 11
    RULE_index = 12
    RULE_pdl_range = 13
    RULE_enum_name = 14
    RULE_instance_name = 15
    RULE_cycleCount = 16
    RULE_sysClock = 17
    RULE_sourceClock = 18
    RULE_chain_id = 19
    RULE_length = 20
    RULE_procName = 21
    RULE_pdl_number = 22
    RULE_tvalue = 23
    RULE_eoc = 24
    RULE_pdl_level_def = 25
    RULE_pdl_level = 26
    RULE_versionString = 27
    RULE_iprocsformodule_def = 28
    RULE_module_name = 29
    RULE_icl_namespace_name = 30
    RULE_pdl_namespace_name = 31
    RULE_iuseprocnamespace_def = 32
    RULE_iproc_def = 33
    RULE_commands = 34
    RULE_argument = 35
    RULE_argWithDefault = 36
    RULE_args = 37
    RULE_command = 38
    RULE_iprefix_def = 39
    RULE_icall_def = 40
    RULE_ireset_def = 41
    RULE_iread_def = 42
    RULE_iwrite_def = 43
    RULE_iscan_def = 44
    RULE_iscan_data = 45
    RULE_ioverridescaninterface_def = 46
    RULE_scanInterfaceRef_list = 47
    RULE_scanInterfaceRef = 48
    RULE_iapply_def = 49
    RULE_iclock_def = 50
    RULE_iclock_override_def = 51
    RULE_irunloop_def = 52
    RULE_imerge_def = 53
    RULE_itake_def = 54
    RULE_irelease_def = 55
    RULE_inote_def = 56
    RULE_istate_def = 57
    RULE_iget_read_data_def = 58
    RULE_pdl_format = 59
    RULE_iget_miscompares_def = 60
    RULE_iget_status_def = 61
    RULE_iset_fail_def = 62
    RULE_text_message = 63

    ruleNames =  [ "pdl_source", "dot_id", "scalar_id", "keyword", "instancePath", 
                   "scanInterface_name", "port", "reg_or_port", "reg_port_or_instance", 
                   "hier_signal", "reg_port_signal_id", "vector_id", "index", 
                   "pdl_range", "enum_name", "instance_name", "cycleCount", 
                   "sysClock", "sourceClock", "chain_id", "length", "procName", 
                   "pdl_number", "tvalue", "eoc", "pdl_level_def", "pdl_level", 
                   "versionString", "iprocsformodule_def", "module_name", 
                   "icl_namespace_name", "pdl_namespace_name", "iuseprocnamespace_def", 
                   "iproc_def", "commands", "argument", "argWithDefault", 
                   "args", "command", "iprefix_def", "icall_def", "ireset_def", 
                   "iread_def", "iwrite_def", "iscan_def", "iscan_data", 
                   "ioverridescaninterface_def", "scanInterfaceRef_list", 
                   "scanInterfaceRef", "iapply_def", "iclock_def", "iclock_override_def", 
                   "irunloop_def", "imerge_def", "itake_def", "irelease_def", 
                   "inote_def", "istate_def", "iget_read_data_def", "pdl_format", 
                   "iget_miscompares_def", "iget_status_def", "iset_fail_def", 
                   "text_message" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    SCALAR_ID=64
    ARGUMENT_REF=65
    LBRACKET=66
    RBRACKET=67
    LPAREN=68
    RPAREN=69
    COLON=70
    DOT=71
    POS_INT=72
    TCL_HEX_NUMBER=73
    TCL_BIN_NUMBER=74
    ISCAN_HEX_NUMBER=75
    ISCAN_BIN_NUMBER=76
    EVALUE=77
    DVALUE=78
    TSUFFIX=79
    SL_COMMENT=80
    WS=81
    QUOTED=82
    SEMICOLON=83
    NL=84

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Pdl_sourceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(pdlParser.WS)
            else:
                return self.getToken(pdlParser.WS, i)

        def eoc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pdlParser.EocContext)
            else:
                return self.getTypedRuleContext(pdlParser.EocContext,i)


        def pdl_level_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pdlParser.Pdl_level_defContext)
            else:
                return self.getTypedRuleContext(pdlParser.Pdl_level_defContext,i)


        def iprocsformodule_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pdlParser.Iprocsformodule_defContext)
            else:
                return self.getTypedRuleContext(pdlParser.Iprocsformodule_defContext,i)


        def iuseprocnamespace_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pdlParser.Iuseprocnamespace_defContext)
            else:
                return self.getTypedRuleContext(pdlParser.Iuseprocnamespace_defContext,i)


        def iproc_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pdlParser.Iproc_defContext)
            else:
                return self.getTypedRuleContext(pdlParser.Iproc_defContext,i)


        def SL_COMMENT(self, i:int=None):
            if i is None:
                return self.getTokens(pdlParser.SL_COMMENT)
            else:
                return self.getToken(pdlParser.SL_COMMENT, i)

        def getRuleIndex(self):
            return pdlParser.RULE_pdl_source

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPdl_source" ):
                listener.enterPdl_source(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPdl_source" ):
                listener.exitPdl_source(self)




    def pdl_source(self):

        localctx = pdlParser.Pdl_sourceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_pdl_source)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 135
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [pdlParser.WS]:
                    self.state = 128
                    self.match(pdlParser.WS)
                    pass
                elif token in [pdlParser.SEMICOLON, pdlParser.NL]:
                    self.state = 129
                    self.eoc()
                    pass
                elif token in [pdlParser.T__0]:
                    self.state = 130
                    self.pdl_level_def()
                    pass
                elif token in [pdlParser.T__1]:
                    self.state = 131
                    self.iprocsformodule_def()
                    pass
                elif token in [pdlParser.T__6]:
                    self.state = 132
                    self.iuseprocnamespace_def()
                    pass
                elif token in [pdlParser.T__2]:
                    self.state = 133
                    self.iproc_def()
                    pass
                elif token in [pdlParser.SL_COMMENT]:
                    self.state = 134
                    self.match(pdlParser.SL_COMMENT)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 137 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << pdlParser.T__0) | (1 << pdlParser.T__1) | (1 << pdlParser.T__2) | (1 << pdlParser.T__6))) != 0) or ((((_la - 80)) & ~0x3f) == 0 and ((1 << (_la - 80)) & ((1 << (pdlParser.SL_COMMENT - 80)) | (1 << (pdlParser.WS - 80)) | (1 << (pdlParser.SEMICOLON - 80)) | (1 << (pdlParser.NL - 80)))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dot_idContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scalar_id(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pdlParser.Scalar_idContext)
            else:
                return self.getTypedRuleContext(pdlParser.Scalar_idContext,i)


        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(pdlParser.DOT)
            else:
                return self.getToken(pdlParser.DOT, i)

        def getRuleIndex(self):
            return pdlParser.RULE_dot_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDot_id" ):
                listener.enterDot_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDot_id" ):
                listener.exitDot_id(self)




    def dot_id(self):

        localctx = pdlParser.Dot_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_dot_id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.scalar_id()
            self.state = 144
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 140
                    self.match(pdlParser.DOT)
                    self.state = 141
                    self.scalar_id() 
                self.state = 146
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Scalar_idContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SCALAR_ID(self):
            return self.getToken(pdlParser.SCALAR_ID, 0)

        def keyword(self):
            return self.getTypedRuleContext(pdlParser.KeywordContext,0)


        def getRuleIndex(self):
            return pdlParser.RULE_scalar_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScalar_id" ):
                listener.enterScalar_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScalar_id" ):
                listener.exitScalar_id(self)




    def scalar_id(self):

        localctx = pdlParser.Scalar_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_scalar_id)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [pdlParser.SCALAR_ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.match(pdlParser.SCALAR_ID)
                pass
            elif token in [pdlParser.T__0, pdlParser.T__1, pdlParser.T__2, pdlParser.T__3, pdlParser.T__4, pdlParser.T__5, pdlParser.T__6, pdlParser.T__7, pdlParser.T__8, pdlParser.T__9, pdlParser.T__10, pdlParser.T__11, pdlParser.T__12, pdlParser.T__13, pdlParser.T__14, pdlParser.T__15, pdlParser.T__16, pdlParser.T__17, pdlParser.T__18, pdlParser.T__19, pdlParser.T__20, pdlParser.T__21, pdlParser.T__22, pdlParser.T__23, pdlParser.T__24, pdlParser.T__25]:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.keyword()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KeywordContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pdlParser.RULE_keyword

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKeyword" ):
                listener.enterKeyword(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKeyword" ):
                listener.exitKeyword(self)




    def keyword(self):

        localctx = pdlParser.KeywordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_keyword)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << pdlParser.T__0) | (1 << pdlParser.T__1) | (1 << pdlParser.T__2) | (1 << pdlParser.T__3) | (1 << pdlParser.T__4) | (1 << pdlParser.T__5) | (1 << pdlParser.T__6) | (1 << pdlParser.T__7) | (1 << pdlParser.T__8) | (1 << pdlParser.T__9) | (1 << pdlParser.T__10) | (1 << pdlParser.T__11) | (1 << pdlParser.T__12) | (1 << pdlParser.T__13) | (1 << pdlParser.T__14) | (1 << pdlParser.T__15) | (1 << pdlParser.T__16) | (1 << pdlParser.T__17) | (1 << pdlParser.T__18) | (1 << pdlParser.T__19) | (1 << pdlParser.T__20) | (1 << pdlParser.T__21) | (1 << pdlParser.T__22) | (1 << pdlParser.T__23) | (1 << pdlParser.T__24) | (1 << pdlParser.T__25))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstancePathContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dot_id(self):
            return self.getTypedRuleContext(pdlParser.Dot_idContext,0)


        def getRuleIndex(self):
            return pdlParser.RULE_instancePath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstancePath" ):
                listener.enterInstancePath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstancePath" ):
                listener.exitInstancePath(self)




    def instancePath(self):

        localctx = pdlParser.InstancePathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_instancePath)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.dot_id()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScanInterface_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scalar_id(self):
            return self.getTypedRuleContext(pdlParser.Scalar_idContext,0)


        def instancePath(self):
            return self.getTypedRuleContext(pdlParser.InstancePathContext,0)


        def DOT(self):
            return self.getToken(pdlParser.DOT, 0)

        def getRuleIndex(self):
            return pdlParser.RULE_scanInterface_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScanInterface_name" ):
                listener.enterScanInterface_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScanInterface_name" ):
                listener.exitScanInterface_name(self)




    def scanInterface_name(self):

        localctx = pdlParser.ScanInterface_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_scanInterface_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 155
                self.instancePath()
                self.state = 156
                self.match(pdlParser.DOT)


            self.state = 160
            self.scalar_id()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PortContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def hier_signal(self):
            return self.getTypedRuleContext(pdlParser.Hier_signalContext,0)


        def getRuleIndex(self):
            return pdlParser.RULE_port

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPort" ):
                listener.enterPort(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPort" ):
                listener.exitPort(self)




    def port(self):

        localctx = pdlParser.PortContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_port)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.hier_signal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Reg_or_portContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def hier_signal(self):
            return self.getTypedRuleContext(pdlParser.Hier_signalContext,0)


        def getRuleIndex(self):
            return pdlParser.RULE_reg_or_port

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReg_or_port" ):
                listener.enterReg_or_port(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReg_or_port" ):
                listener.exitReg_or_port(self)




    def reg_or_port(self):

        localctx = pdlParser.Reg_or_portContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_reg_or_port)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.hier_signal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Reg_port_or_instanceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def hier_signal(self):
            return self.getTypedRuleContext(pdlParser.Hier_signalContext,0)


        def getRuleIndex(self):
            return pdlParser.RULE_reg_port_or_instance

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReg_port_or_instance" ):
                listener.enterReg_port_or_instance(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReg_port_or_instance" ):
                listener.exitReg_port_or_instance(self)




    def reg_port_or_instance(self):

        localctx = pdlParser.Reg_port_or_instanceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_reg_port_or_instance)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.hier_signal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Hier_signalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def reg_port_signal_id(self):
            return self.getTypedRuleContext(pdlParser.Reg_port_signal_idContext,0)


        def instancePath(self):
            return self.getTypedRuleContext(pdlParser.InstancePathContext,0)


        def DOT(self):
            return self.getToken(pdlParser.DOT, 0)

        def ARGUMENT_REF(self):
            return self.getToken(pdlParser.ARGUMENT_REF, 0)

        def getRuleIndex(self):
            return pdlParser.RULE_hier_signal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHier_signal" ):
                listener.enterHier_signal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHier_signal" ):
                listener.exitHier_signal(self)




    def hier_signal(self):
